Fix: FFF 찾는 로직 수정